# python-keycloak

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .releaserc.json  .travis.yml  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  LICENSE  MANIFEST.in  Pipfile  README.md  bitbucket-pipelines.yml  dev-requirements.txt  docs-requirements.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_keycloak_init.sh  tox.env  tox.ini
.circleci/: config.yml
.github/workflows/: bump.yaml  daily.yaml  lint.yaml  publish.yaml  run_tests.yml
docs/: Makefile  conf.py  index.rst  make.bat
docs/source/: api.rst  changelog.rst  conf.py  contributing.rst  getting_started.rst  index.md  index.rst  install.rst
docs/source/modules/: admin.rst  async.rst  openid_client.rst  uma.rst
keycloak/: __init__.py  connection.py  exceptions.py  keycloak_admin.py  keycloak_admin_token.py  keycloak_openid.py  uma_permissions.py  urls_patterns.py
keycloak/authorization/: __init__.py  permission.py  policy.py  role.py
keycloak/tests/: test_connection.py  test_openid.py  test_uma_permissions.py
src/keycloak/: __init__.py  _version.py  connection.py  exceptions.py  keycloak_admin.py  keycloak_models.py  keycloak_openid.py  keycloak_uma.py  openid_connection.py  pkce_utils.py  uma_permissions.py  urls_patterns.py
src/keycloak/asynchronous/: __init__.py  connection.py  exceptions.py  keycloak_admin.py  keycloak_openid.py  keycloak_uma.py  openid_connection.py
src/keycloak/authorization/: __init__.py  permission.py  policy.py  role.py
tests/: __init__.py  conftest.py  test_authorization.py  test_connection.py  test_exceptions.py  test_keycloak_admin.py  test_keycloak_openid.py  test_keycloak_uma.py  test_license.py  test_orgs.py  test_pkce_flow.py  test_uma_permissions.py  test_urls_patterns.py
tests/data/: authz_settings.json
