[tool.poetry]
name = "python-keycloak"
version = "0.0.0"
description = "python-keycloak is a Python package providing access to the Keycloak API."
license = "MIT"
readme = "README.md"
keywords = ["keycloak", "openid", "oidc"]
authors = [
    "Marcos Pereira <marcospereira.mpj@gmail.com>",
    "Richard Nemeth <ryshoooo@gmail.com>",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
    "Operating System :: MacOS",
    "Operating System :: Unix",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Utilities",
]
packages = [
    { include = "keycloak", from = "src/" },
    { include = "keycloak/**/*.py", from = "src/" },
    { include = "keycloak/py.typed", from = "src/" },
]
include = ["LICENSE", "CHANGELOG.md", "CONTRIBUTING.md"]

[tool.poetry.urls]
Changelog = "https://raw.githubusercontent.com/marcospereirampj/python-keycloak/master/CHANGELOG.md"
Documentation = "https://python-keycloak.readthedocs.io/en/latest/"
"Issue tracker" = "https://github.com/marcospereirampj/python-keycloak/issues"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
requests = ">=2.20.0"
requests-toolbelt = ">=0.6.0"
deprecation = ">=2.1.0"
jwcrypto = ">=1.5.4"
httpx = ">=0.23.2"
async-property = ">=0.2.2"
aiofiles = ">=24.1.0"

[tool.poetry.group.docs.dependencies]
alabaster = ">=0.7.0"
commonmark = ">=0.9.1"
recommonmark = ">=0.7.1"
Sphinx = ">=7.0.0"
m2r2 = ">=0.3.2"
sphinx-autoapi = ">=3.0.0"
setuptools = ">=70.0.0"
sphinx-book-theme = ">=1.1.3"

[tool.poetry.group.dev.dependencies]
tox = ">=4.0.0"
pytest = ">=7.1.2"
pytest-cov = ">=3.0.0"
pytest-asyncio = ">=0.23.7"
wheel = ">=0.38.4"
pre-commit = ">=3.5.0"
commitizen = ">=2.28.0"
cryptography = ">=42.0.0"
codespell = ">=2.1.0"
darglint = ">=1.8.1"
twine = ">=4.0.2"
freezegun = ">=1.2.2"
docutils = "<0.21"
ruff = ">=0.9.3"
backports-asyncio-runner = { "version" = ">=1.2.0", "python" = ">=3.9,<3.11" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 99

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "BLE001",
    "C901",
    "COM812",
    "D203",
    "D212",
    "FBT001",
    "FBT002",
    "FBT003",
    "N818",
    "PLR0912",
    "PLR0913",
    "PLR0915",
    "TRY003",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG001","PLR2004", "PT011", "S101", "SLF001"]
"docs/*" = ["A001", "EXE001", "ERA001"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
